# cpp-ci-pipeline

./: .gitignore  .travis.yml  CMakeLists.txt  main.cpp  sonar-project.properties
include/: Calculator.hpp
src/: Calculator.cpp
test/: CMakeLists.txt  CalculatorTest.cpp
